# fishbait

./: README.md  docker-compose.dev.yml  docker-compose.prod.yml
.githooks/: pre-push
api/: .gitignore  Dockerfile  pyproject.toml
api/entrypoints/: api.dev.sh  api.prod.sh  worker.dev.sh  worker.prod.sh
api/src/: app.py  settings.py  utils.py
