[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
datadog = "^0.50.2"
flask = "^3.1.0"
gunicorn = "^23.0.0"
mypy = "^0.981"
redis = "^5.2.1"
celery = "^5.4.0"
ddtrace = "^2.18.1"

[tool.poetry.group.dev.dependencies]
cpplint = "^1.6.1"
pylint = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
